# Multi-AI-Workflow

./: .gitignore  CLAUDE.md  README.md  README_CN.md  install.sh  package-lock.json  package.json
.maw/: config.json
.maw/skills/collaborating-with-codex/scripts/: codex_bridge.py
.maw/skills/collaborating-with-gemini/scripts/: gemini_bridge.py
.maw/skills/report-generator/: SKILL.md  report_generator.py
bridges/: pyproject.toml
bridges/src/maw_bridges/: __init__.py  codex_bridge.py  gemini_bridge.py
claude-commands/: cancel-ralph.md  codex.md  gemini.md  maw.md  ralph-loop.md  report.md
codex-lens/: pyproject.toml
codex-lens/src/codex_lens/: __init__.py  cli.py  indexer.py  models.py  search.py
dashboard/: package.json
dashboard/public/: app.js  index.html  styles.css
dashboard/src/: maw-bridge.ts  server.ts  storage.ts
dashboard/src/routes/: api.ts
maw/: package.json
maw/src/: cli.ts  index.ts
maw/src/adapters/: base-adapter.ts
maw/src/commands/: bridge.ts  config.ts  delegate.ts  install.ts  ralph.ts  search.ts  session.ts  skill.ts  view.ts  workflow.ts
maw/src/config/: loader.ts
maw/src/core/: session-manager.ts  skill-registry.ts  workflow-engine.ts
