[project]
name = "codex-lens"
version = "0.1.0"
description = "Code search engine with full-text and semantic search for MAW"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
semantic = [
    "numpy>=1.24.0",
    "openai>=1.0.0",
]

[project.scripts]
codex-lens = "codex_lens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_lens"]
